Discussion & results shuffling

--- a/report/src/sections/08-conclusion.tex
+++ b/report/src/sections/08-conclusion.tex
@@ -1,4 +1,16 @@
 
 
 \section{Conclusion}\label{sec:conclusion}
-This is the conclusion
+After looking into the \glspl{zk} \glspl{ssle} protocol Whisk and the Curdleproofs protocol, we found that there was still was room for improvement in the Curdleproofs protocol.
+We saw the strict requirement of the shuffle size being a power of two as a limitation, and we wanted to remove this limitation to try to reduce the block overhead related to the protocol.
+
+To do this we looked at Springproofs which allows for \glspl{ipa} to be of any size.
+When combining the Curdleproofs protocol with the flexablility of Springporoofs we made the CAAUdleproofs protocol.
+The implementation of the CAAUrdleproofs protocol, is a modified version of the Curdleproofs protocol that allows for any shuffle size.
+
+Through our experiments, we found that the CAAUrdleproofs protocol has similar proving and verifying times to the Curdleproofs protocol when the shuffle size is a power of two.
+But for any shuffle size that is not a power of two, the CAAUrdleproofs protocol has a performance advantage.
+
+Since CAAUrdleproofs enables the use of any shuffle size, it can be used to reduce the block overhead related to the protocol without having to compromise the security of the protocol.
+
+This is why we think that CAAUrdleproofs is a good alternative to Curdleproofs, as it allows for more flexibility in the choice of shuffle size base things like the size of the block overhead and the proving and verifying times.
