--- a/report/src/sections/01-introduction.tex
+++ b/report/src/sections/01-introduction.tex
@@ -20,7 +20,7 @@ This introduces block size overhead to the blockchain.
 Also, additional work is required for both provers and verifiers.
 
 In this paper, we dive into the structure of Curdleproofs to understand, where the protocol can be optimized.
-Specifically, we work with the concept of Inner Product Arguments and how they generally only work for vector sizes that are powers of two.
+Specifically, we work with the concept of Inner Product Arguments (IPA) and how they generally only work for vector sizes that are powers of two.
 
 Our protocol, CAAUrdleproofs, aims to improve on the rigid nature of Curdleproofs.
 Following this, we also provide argumentation of when CAAUrdleproofs is still secure.
