--- a/report/src/sections/08-conclusion.tex
+++ b/report/src/sections/08-conclusion.tex
@@ -4,7 +4,7 @@
 After looking into the \glspl{zk} \glspl{ssle} protocol Whisk and the Curdleproofs protocol, we found that there was still was room for improvement in the Curdleproofs protocol.
 We saw the strict requirement of the shuffle size being a power of two as a limitation, and we wanted to remove this limitation to try to reduce the block overhead related to the protocol.
 
-To do this we looked at Springproofs which allows for \glspl{ipa} to be of any size.
+To do this, we looked at Springproofs which allows for \glspl{ipa} to be of any size.
 When combining the Curdleproofs protocol with the flexablility of Springporoofs we made the CAAUdleproofs protocol.
 The implementation of the CAAUrdleproofs protocol, is a modified version of the Curdleproofs protocol that allows for any shuffle size.
 
