--- a/report/src/sections/08-conclusion.tex
+++ b/report/src/sections/08-conclusion.tex
@@ -9,7 +9,8 @@ Through combining the Curdleproofs protocol with the flexiblility of Springproof
 The implementation of the CAAUrdleproofs protocol, is a modified version of the Curdleproofs protocol that allows for any shuffle size.
 
 Through our experiments, we found that the CAAUrdleproofs protocol has similar proving and verifying times to the Curdleproofs protocol when the shuffle size is a power of two.
-But for any shuffle size that is not a power of two, the CAAUrdleproofs protocol has a performance advantage.
+But for any shuffle size that is not a power of two, the CAAUrdleproofs protocol has a performance advantage. 
+An advantage that is bigger the more below a power of two the shuffle size is.
 
 Since CAAUrdleproofs enables the use of any shuffle size, it can be used to reduce the block overhead related to the protocol without having to compromise the security of the protocol.
 
