--- a/report/src/sections/08-conclusion.tex
+++ b/report/src/sections/08-conclusion.tex
@@ -19,4 +19,5 @@ Here we found that the shuffle size could be reduced to 80 and still be secure, 
 Using this, we see a block overhead of just 72.33\% the size compared to Curdleproof.
  
 
-This is why we think that CAAUrdleproofs is a good alternative to Curdleproofs, as it allows for more flexibility in the choice of shuffle size base things like the size of the block overhead and the proving and verifying times.
+Hence, we have shown CAAUrdleproofs to be an optimized modification of Curdleproofs, as it allows for more flexibility in the choice of shuffle size. 
+The optimization is based on reduction in size of the block overhead and faster proving and verifying times.
