--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -1,6 +1,6 @@
 
 \begin{abstract}
-    Ethereum is one of the biggest proof-of-stake blockchain systems.
+    Ethereum is one of the biggest proof-of-stake blockchains.
     However, it is still vulnerable to attacks.
     One such attack is proposed by Heimbach et al.~where an adversary could de-anonymize validators and then preform a denial-of-service attack on them.
     To try and combat this attack, Ethereum has proposed the use of the Whisk protocol.
