--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -2,7 +2,7 @@
 \begin{abstract}
     Ethereum is one of the biggest proof-of-stake blockchains.
     However, it is still vulnerable to attacks.
-    One such attack is proposed by Heimbach et al.~where an adversary could de-anonymize validators and then preform a denial-of-service attack on them.
+    One such attack is made possible by Heimbach et al.~where an adversary could de-anonymize validators and then preform a denial-of-service attack on them.
     To try and combat this attack, Ethereum has proposed the use of the Whisk protocol.
     Whisk is a Single secret leader election protocol that uses a zero-knowledge proof called Curdleproofs that uses inner product arguments to proof the validity of a shuffle of validators.
     This paper improves upon the Curdleproofs protocol by introducing CAAUrdleproofs, which is a modified version of Curdleproofs with ideas from Springproofs as to allow for the use of any shuffle size.
