Added the resume

--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -13,6 +13,8 @@
 
 % Document
 \begin{document}
+    \input{sections/0-resume}
+    \newpage
     \maketitle
     \input{sections/00-abstract}
     \input{sections/01-introduction}
