fixed double being

--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -186,6 +186,6 @@ In Chapter 6 of Curdleproofs~\cite{Curdleproofs} they explain that the proof has
 \subsection{Problem definition}\label{subsec:problem-definition}
 The current proposal of Curdleproofs only works when the shuffle size of Whisk is set to a power of 2.
 The reason is that the underlying proofs,~\gls{dlipa} in~\gls{sameperm} and~\gls{samemsm}, need to fold recursively down to 1, by halving the size in every round.
-With the current shuffling size being 128, being able to choose the size more flexibly could lead to both performance and size gains.
+With the current shuffling size of 128, being able to choose the size more flexibly could lead to both performance and size gains.
 The problem we study in this article is therefore how to extend Curdleproofs to~$\ell$ values that are not a power of 2.
 
