added acronym for ipa

--- a/report/src/sections/appendix/02-thm1proof.tex
+++ b/report/src/sections/appendix/02-thm1proof.tex
@@ -91,7 +91,7 @@
     So, the SIPA$(f)$, analogously CAAUrdleproofs, is a non-interactive random oracle argument having completeness and computational knowledge soundness as well.
 
     Now we switch our focus to another argument, namely the~\gls{samemsm} argument.
-    As with the~\gls{dlipa},~\gls{samemsm} is also an inner product argument.
+    As with the~\gls{dlipa},~\gls{samemsm} is also an~\gls{ipa}.
     Hence, to work in CAAUrdleproofs, it also needs the optimizations used in the~\gls{dlipa}.
 
     This means that the~\gls{samemsm} argument uses the Springproofs scheme function.
