Summary works now, numbering starts from title page

--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -14,7 +14,8 @@
 % Document
 \begin{document}
     \input{sections/0-resume}
-    \newpage
+    \clearpage
+    \setcounter{page}{1}
     \maketitle
     \input{sections/00-abstract}
     \input{sections/01-introduction}
