--- a/report/src/sections/0-resume.tex
+++ b/report/src/sections/0-resume.tex
@@ -1,4 +1,3 @@
-
-\begin{resume}
-    This is a placeholder for the resume
-\end{resume}
+\thispagestyle{empty}
+\textbf{\large Summary}
+This is the summary placeholder
