--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -31,23 +31,23 @@ Though, that was to be expected since CAAUrdleproofs uses the same shuffling alg
 
 \subsection{Shuffle security}\label{subsec:Shuffle-security}
 
-\begin{figure*}[!htb]
+\begin{figure}[!htb]
     \centering
-    \subfloat[\centering]{{\includegraphics[width=0.325\textwidth]{figures/results/4096-256-p2} }}%
-    \subfloat[\centering]{{\includegraphics[width=0.325\textwidth]{figures/results/5462-256-p2} }}%
-    \subfloat[\centering]{{\includegraphics[width=0.325\textwidth]{figures/results/8192-256-p2} }}%
-    \caption{The results of the shuffle security experiment showing the mean amount of honest shuffles necessary with one standard deviation}%
+    \subfloat[\centering]{{\includegraphics[width=0.99\columnwidth]{figures/results/4096-256-p2}}}\\[-2pt]
+    \subfloat[\centering]{{\includegraphics[width=0.99\columnwidth]{figures/results/5462-256-p2}}}\\[-2pt]
+    \subfloat[\centering]{{\includegraphics[width=0.99\columnwidth]{figures/results/8192-256-p2}}}\\[-2pt]
+    \caption{Results of shuffle security experiment showing mean amount of honest shuffles necessary with one standard deviation}%
     \label{fig:shufflesecurity}%
-\end{figure*}
+\end{figure}
 
-\begin{figure*}[!htb]
+\begin{figure}[!htb]
     \centering
-    \subfloat[\centering]{{\includegraphics[width=0.325\textwidth]{figures/results/violin-4096} }}%
-    \subfloat[\centering]{{\includegraphics[width=0.325\textwidth]{figures/results/violin-5462} }}%
-    \subfloat[\centering]{{\includegraphics[width=0.325\textwidth]{figures/results/violin-8192} }}%
-    \caption{The results of the shuffle security experiment showing the spread of nessecary shuffle need for the shuffle to be secure}%
+    \subfloat[\centering]{{\includegraphics[width=0.99\columnwidth]{figures/results/violin-4096}}}\\[-2pt]
+    \subfloat[\centering]{{\includegraphics[width=0.99\columnwidth]{figures/results/violin-5462}}}\\[-2pt]
+    \subfloat[\centering]{{\includegraphics[width=0.99\columnwidth]{figures/results/violin-8192}}}\\[-2pt]
+    \caption{Results of shuffle security experiment showing spread of nessecary shuffles needed for shuffle to be secure}%
     \label{fig:shufflesecurityviolin}%
-\end{figure*}
+\end{figure}
 
 The results of the shuffle security experiment are shown in \autoref{fig:shufflesecurity}.
 
