--- a/report/src/sections/05-experimental-protocol.tex
+++ b/report/src/sections/05-experimental-protocol.tex
@@ -3,7 +3,7 @@
 In this section, we will describe how our experiments are run, and what we want to measure.
 We also discuss which parameters we can tweak in the different experiments that we have.
 
-The experiments are run on a virtual machine hosted on Strato CLAAUDIA through Aalborg University.
+The experiments are run on a virtual machine hosted on Strato CLAAUDIA at Aalborg University.
 The machine is using an Intel Xeon Cascadelake processor, CPU family 6, model 85.
 It has 16 virtual CPUs and 64 GB of RAM available.
 The virtual machine is running Ubuntu Server 24.
@@ -24,7 +24,7 @@ Since Curdleproofs is unable to run benchmarks, unless the shuffle size is a pow
 
 \subsection{Shuffle security}\label{subsec:experimental-protocol-shuffle-security}
 In this experiment we run the shuffle protocol with varying shuffle sizes and varying number of adversarial tracked ciphertexts.
-The purpose of this experiment is to find the lowest possible shuffle size that is still secure.
+The purpose of this experiment is to find the lowest possible shuffle size that is still secure against adversarial tracking.
 We therefore run the experiment with shuffle sizes, $\ell$, between 64 and 128.
 For the number of adversarial tracked ciphertexts, we use the values $\alpha=\{1/2,1/3,1/4\}$
 
