--- a/report/src/sections/0-resume.tex
+++ b/report/src/sections/0-resume.tex
@@ -1,3 +1,19 @@
 \thispagestyle{empty}
 \textbf{\large Summary}
-This is the summary placeholder
+This paper addresses a key vulnerability in Ethereum’s proof-of-stake (PoS), namely the vulnerability of block proposers against denial-of-service (DoS) attacks through deanonymization.
+To counter this, Ethereum has proposed the Whisk protocol, a Single Secret Leader Election (SSLE) protcol that uses zero-knowledge proofs to hide proposer identities.
+Whisk relies on a shuffle-based zero-knowledge proof protocol called Curdleproofs, which uses Inner Product Arguments (IPAs) to validate the correctness of shuffles.
+However, Curdleproofs is constrained to shuffle sizes that are only a power of two due to the recursive nature of the IPA.
+
+
+This is why we propose a modified protocol, CAAUrdleproofs, which lifts this restriction by integrating ideas from Springproofs.
+CAAUrdleproofs introduces a new folding scheme which allows the use of arbitrary shuffle sizes to enable more flexibility when reducing or increasing the size.
+The experiments show that CAAUrdleproofs maintains similar performance to Curdleproofs for power of two shuffle sizes but outperforms it when shuffle sizes are not a power of two, especially when the size is slightly below a power of two.
+This paper also proposes reducing the shuffle size from 128 down to 80 which would result in a notable decrease in the block overhead created be the protocol from 16.656 KB to 12.048 KB, saving around 12.11 GB annually.
+
+
+This paper also provides security analysis of the shuffle mechanism with different shuffle sizes and under various amounts of adversarial influence.
+The results validate that smaller shuffle sizes can still maintain a secure shuffle within the Amount available to the protocol.
+The paper concludes by mentioning that CAAUrdleproofs is an efficient improvement to Curdleproofs, and it suggests future development in the directions of post-quantum security, protocol refinement or possibly looking at the use of Weighted inner product argument (WIPA).
+
+
