--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -16,6 +16,7 @@
     \input{sections/0-resume}
     \clearpage
     \setcounter{page}{1}
+    \twocolumn
     \maketitle
     \input{sections/00-abstract}
     \input{sections/01-introduction}
