--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -67,7 +67,7 @@ Likewise, we see that at~$\ell=108$ we need about 1/4 of the shuffles to be hone
 In general, all three of the experiments, despite the difference in $\alpha$, show the same trend.
 They all level out, but the higher~$\alpha$ is, the lower the leveling happens, but the later it happens as well.
 There are two things, however, that are different between the experiments.
-At an~$\alpha$ of 4096 we see that at the start, with $\ell=32$, the mean number of honest shuffles necessary to make the shuffle secure is $\sim 500$ lower than the 2 others.
+At~$\alpha=4096$ we see with $\ell=32$, the mean number of honest shuffles necessary to make the shuffle secure is $\sim 500$ lower than the two other $\alpha$ values.
 As~$\ell$ increases, the mean number of honest shuffles necessary to make the shuffle secure becomes similar to the other $\alpha$ values.
 Another thing that differs between the experiments is that they all have a sudden dip in higher $\ell$ values in the experiment.
 Here we see a trend that the lower the~$\alpha$ is, the earlier the dip happens.
