--- a/report/src/sections/0-resume.tex
+++ b/report/src/sections/0-resume.tex
@@ -23,7 +23,8 @@ However, Curdleproofs is constrained to shuffling subsets of sizes that are only
 This is why we propose a modified protocol, CAAUrdleproofs, which lifts this restriction by integrating ideas from Springproofs.
 CAAUrdleproofs introduces a new folding scheme which allows the use of arbitrary shuffle sizes to enable more flexibility when reducing or increasing the size.
 The experiments show that CAAUrdleproofs maintains similar performance to Curdleproofs for power of two shuffle sizes but outperforms it when shuffle sizes are not a power of two; especially when the size is slightly above a power of two.
-This paper also proposes reducing the shuffle size from 128 down to 80 which would result in a notable decrease in the block overhead created be the protocol from 16.656 KB to 12.048 KB, saving around 12.11 GB annually.
+This paper also proposes reducing the shuffle size from 128 down to 80 which would result in a notable decrease in the block overhead created by the protocol.
+The overhead would go from 16.656 KB to 12.048 KB, saving around 12.11 GB annually.
 
 
 This paper also provides security analysis of the shuffle mechanism with different shuffle sizes and under various amounts of adversarial influence.
