--- a/report/src/sections/0-resume.tex
+++ b/report/src/sections/0-resume.tex
@@ -29,7 +29,8 @@ The overhead would go from 16.656 KB to 12.048 KB, saving around 12.11 GB annual
 
 This paper also provides security analysis of the shuffle mechanism with different shuffle sizes and under various amounts of adversarial influence.
 The results validate that smaller shuffle sizes can still maintain a secure shuffle within the total amount of shuffles available in a round of the Whisk protocol.
-The paper concludes by mentioning that CAAUrdleproofs is an efficient improvement to Curdleproofs, and it suggests future development in the directions of post-quantum security, protocol refinement or possibly looking at the use of Weighted inner product argument (WIPA).
+The paper concludes by mentioning that CAAUrdleproofs is an efficient improvement to Curdleproofs.
+It suggests future development in the directions of post-quantum security, protocol refinement or possibly looking at the use of a Weighted Inner Product Argument (WIPA).
 
 
 
